# Selection-of-Cortical-Dynamics-for-Motor-Behaviour

./: CMakeLists.txt  Doxyfile  README.md
CMakeModules/: FindCENSLIB.cmake
include/: basalganglia.h  csntc.h  hand_controller.h  hand_engine.h  layer.h  md5.h  parametrizable.h  reservoir.h  simulator.h  utils.h
scripts/: .py_sources  .tags  fun.py  fun_4.py  ik.py  ik_4.py  moon.py  offline_render.py  online_render.py  plot_arm.py  plot_arm_video_full.py  plot_mse.py  sim_manager.py  unify
src/: .cpp_sources  .tags  CMakeLists.txt  basalganglia.cpp  basalganglia_test.cpp  csntc.cpp  hand.cpp  hand_controller.cpp  hand_engine.cpp  layer.cpp  md5.cpp  reservoir.cpp  reservoir_test.cpp  roessler.cpp  simulation1.cpp  simulation2.cpp  simulator.cpp  utils.cpp
tests/reservoir/: activation_data  plot.py  run.sh  weights
tests/reservoir/parameters/: reservoir
